--- a/vignettes/dogma.Rmd
+++ b/vignettes/dogma.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "dogma"
-output: rmarkdown::html_vignette
+output: rmarkdown::pdf_document
 vignette: >
   %\VignetteIndexEntry{dogma}
   %\VignetteEngine{knitr::rmarkdown}
@@ -14,6 +14,16 @@ knitr::opts_chunk$set(
 )
 ```
 
+
+
 ```{r setup}
 library(dogma)
 ```
+
+#function 1
+#function 2
+#function 3
+#function 4
+#function 5
+
+
